Introduction - update file sampai selesai beserta link dan gambar untuk masing-masing wisata

--- a/src/Introduction.jade
+++ b/src/Introduction.jade
@@ -25,5 +25,93 @@ html
       Section
         p Selain karena kondisi alam, Ubud juga terkenal karena seni dan budaya Bali dan sangat berkembang dari tahun ketahun. Sebagian masyarakat Ubud, kehidupan sehari-hari mereka tidak lepas dari unsur seni dan budaya. Juga sebagian masyarakatnya bermata pencaharian sebagai seniman.
 
+      Section
+        p Jika anda ingin mengunjungi desa Ubud, supir kami siap mengantarkan anda desa Ubud, jika anda menyewa kendaraan dengan supir di rental mobil Bali. Selain itu, kami juga menyediakan tour murah di Bali secara khusus untuk tour di Ubud. Untuk lebih detail tentang paket tour ke Ubud, silakan klik link ini, paket tour Ubud.
+
+      Section
+        h2 Daftar Aktifitas & Tempat Menarik Di Ubud
+
+      Section
+        <a href="1. Tampak Siring.html"> <h2> Tampak Siring </h2> </a>
+        img.big(src="images/Tampak Siring - 1.jpg" height = 300 width = 600)
+
+      Section
+        <a href="2. Puri Ubud.html"> <h2> Puri Ubud </h2> </a>
+        img.big(src="images/istana-puri-saren-ubud-bali.jpg" height = 300 width = 600)
+
+      Section
+        <a href="3. Pura Taman Saraswati.html"> <h2> Pura Taman Saraswati </h2> </a>
+        img.big(src="images/Pura-Taman-Saraswati-Ubud.jpg" height = 300 width = 600)
+
+      Section
+        <a href="4. Tari Kecak Ubud.html"> <h2> Tari Kecak Ubud </h2> </a>
+        img.big(src="images/Tari-Kecak-Ubud.jpg" height = 300 width = 600)
+
+      Section
+        <a href="5. Lempad House.html"> <h2> Lempad House </h2> </a>
+        img.big(src="images/lempad-house.jpg" height = 300 width = 600)
+
+      Section
+        <a href="6. Ayung Rafting.html"> <h2> Ayung Rafting </h2> </a>
+        img.big(src="images/ayung-rafting-ubud.jpg" height = 300 width = 600)
+
+      Section
+        <a href="7. Sawah Terasering Ubud.html"> <h2> Sawah Terasering Ubud </h2> </a>
+        img.big(src="images/Sawah-Terasering-Ubud.jpg" height = 300 width = 600)
+
+      Section
+        <a href="8. Ubud Monkey Forest.html"> <h2> Ubud Monkey Forest </h2> </a>
+        img.big(src="images/ubudMKF.jpg" height = 300 width = 600)
+
+      Section
+        <a href="9. Arma Museum Ubud.html"> <h2> Arma Museum Ubud </h2> </a>
+        img.big(src="images/amu1.jpg" height = 300 width = 600)
+
+      Section
+        <a href="10. Goa Gajah Ubud.html"> <h2> Goa Gajah Ubud </h2> </a>
+        img.big(src="images/Goa Gajah - 1.jpg" height = 300 width = 600)
+
+      Section
+        <a href="11. Gunung Kawi Bali.html"> <h2> Gunung Kawi Bali </h2> </a>
+        img.big(src="images/Gunung-Kawi-Bali.jpg" height = 300 width = 600)
+
+      Section
+        <a href="12. Air Terjun Tegenungan.html"> <h2> Air Terjun Tegenungan </h2> </a>
+        img.big(src="images/air-terjun-tegenungan.jpg" height = 300 width = 600)
+
+      Section
+        <a href="13. Tirta Sari Legong.html"> <h2> Tirta Sari Legong </h2> </a>
+        img.big(src="images/tsl.jpg" height = 300 width = 600)
+
+      Section
+        <a href="14. Museum Puri Lukisan Ubud.html"> <h2> Museum Puri Lukisan Ubud </h2> </a>
+        img.big(src="images/Museum-Puri-Lukisan-Ubud.jpg" height = 300 width = 600)
+
+      Section
+        <a href="15. Pura Gunung Lebah.html"> <h2> Pura Gunung Lebah </h2> </a>
+        img.big(src="images/PGL.jpg" height = 300 width = 600)
+
+      Section
+        <a href="16. Museum Neka Ubud Bali.html"> <h2> Museum Neka Ubud Bali </h2> </a>
+        img.big(src="images/museum-neka-ubud.jpg" height = 300 width = 600)
+
+      Section
+        <a href="17. Museum Blanco Ubud.html"> <h2> Museum Blanco Ubud </h2> </a>
+        img.big(src="images/don-antonio-blanco-museum-ubud.jpg" height = 300 width = 600)
+
+      Section
+        <a href="18. Legong Mahabharata.html"> <h2> Legong Mahabharata </h2> </a>
+        img.big(src="images/Legong-Mahabharata-Di-Ubud.jpg" height = 300 width = 600)
+
+      Section
+        <a href="19. Yeh Pulu Relief.html"> <h2> Yeh Pulu Relief </h2> </a>
+        img.big(src="images/yeh-pulu-relief.jpg" height = 300 width = 600)
+
+      Section
+        <a href="20. Tari Barong Ubud.html"> <h2> Tari Barong Ubud </h2> </a>
+        img.big(src="images/TariBarongUbud.jpg" height = 300 width = 600)
+
    include footer
+
+
 
