Check HTML - mengedit 13-16

--- a/src/14. Museum Puri Lukisan Ubud.jade
+++ b/src/14. Museum Puri Lukisan Ubud.jade
@@ -1,42 +1,39 @@
 doctype html
 html
-  head
-    meta(charset='utf-8')
-    meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
-    title Museum Puri Lukisan Ubud
+  include header
 
-
-    link(rel='stylesheet', type='text/css', href='build/build.css')
-
-  body
-
+  body.classic
+    include menu
     article
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
         h1 Museum Puri Lukisan Ubud
         img.big(src="images/Museum-Puri-Lukisan-Ubud.jpg" height = 250 width = 600)
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')        
+      section        
         p Tempat wisata Ubud sangat terkenal akan wisata kesenian dan budaya, dan merupakan pusat dari lokasi museum di Bali. Museum seni yang ada di Ubud seperti adalah museum lukisan seperti Arma museum, museum Neka dan museum Puri Lukisan Ubud.
          P Museum Puri Lukisan Ubud, merupakan museum tertua yang ada di Bali, museum ini lebih mengkhusus akan karya seni lukis Bali traditional dan modern, serta seni ukir dan mengkhusus ke ukiran kayu. 
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
         p Museum Puri Lukisan Ubud, merupakan museum tertua yang ada di Bali, museum ini lebih mengkhusus akan karya seni lukis Bali traditional dan modern, serta seni ukir dan mengkhusus ke ukiran kayu.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
         img.big(src="images/museum-puri-lukisan-di-ubud.jpg" height = 300 width = 500)
         h3 Lokasi Museum Puri Lukisan Ubud
         p  Tentunya anda ingin tahu letak lokasi dari museum Puri Lukisan di Ubud. Lokasinya berada di jalan Raya Ubud. Sangat dekat dengan lokasinya dari puri Ubud dan pasar seni Ubud, jaraknya sekitar 300 meter ke barat. Untuk melihat peta lokasi silakan klik link ini. Lokasi Museum Puri Lukisan Di Ubud.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
         p Museum ini buka dari jam 09:00 - 18:00 (waktu Bali) dan buka setiap hari, kecuali pada hari raya Nyepi. Tiket masuk akan dikenakan sebesar Rp 75.000 per orang dewasa. Harga tiket masuk sudah termasuk minuman yang menyegarkan dan kue. Untuk anak-anak yang berumur di bawah 15 tahun dan ditemani oleh orang tua, tidak akan dikenakan biaya tiket masuk.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
         h2 Kolesi Seni Museum Puri Lukisan
         p Karya seni di museum ini diletakkan di empat bangunan berbeda di komplek museum. Untuk dapat melihat semua hasil seni di museum ini, setidaknya anda harus meluangkan waktu kurang lebih 2 jam. Koleksi lukisan mulai dari gaya lukis Batuan, gaya lukis Sanur, gaya lukis Ubud.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
         img(src="images/puri-lukisan-museum-ubud.jpg")
 
 
-   script(src='build/build.js')
+   include footer
+
+
+
