--- a/src/16. Museum Neka Ubud Bali.jade
+++ b/src/16. Museum Neka Ubud Bali.jade
@@ -1,68 +1,54 @@
 doctype html
 html
-  head
-    meta(charset='utf-8')
-    meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
-    title Pura Gunung Lebah
+  include header
 
-
-    link(rel='stylesheet', type='text/css', href='build/build.css')
-
-  body
-
+  body.classic
+    include menu
     article
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
         h1 Museum Neka Ubud Bali
         img.big(src="images/museumneka2.jpg" height = 250 width = 600)
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')        
+      section        
         p Aktivitas wisata Ubud Bali, sangat terkenal sampai ke mancanegara dan banyak hal menarik yang wisatawan, dapat lakukan di tempat wisata Ubud. Salah satu tempat menarik di Ubud Bali, yang banyak mendapat kunjungan dari wisatawan adalah Museum Neka Ubud Bali. Jika anda pernah mendengar pelukis terkenal Indonesia, yang bernama Affandi dan Bagong Kussudiardjo. Maka Museum Neka Ubud, salah satu tempat tempat wisata di Ubud Bali yang harus di kunjungi.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
         h3 Neka Art Museum Di Ubud
-        p Museum Neka Ubud Bali, lokasinya berada di Jalan Raya Campuhan, Kedewatan, Ubud. Jika anda ingin melihat lokasi museum Neka di peta, silakan klik link ini, peta lokasi museum Neka. 
-
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+        p Museum Neka Ubud Bali, lokasinya berada di Jalan Raya Campuhan, Kedewatan, Ubud
         p  Museum Neka Ubud Bali, dibuka pada tahun 1982. Nama Museum berasal dari nama seorang guru, yang memiliki kegemaran dalam mengkoleksi lukisan, nama guru tersebut adalah Suteja Neka.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        p Bangunan museum Neka Ubud Bali, memiliki arsitektur khas Bali dengan standar museum International. Selain bangunan museum Neka sangat terawat, cara menampilkan hasil seni lukis di museum Neka sangat terorganisir. Ini memudahkan pengunjung, untuk mengerti dan menikmati seni lukis. Setiap tahun, lukisan di museum Neka bertambah banyak dan saat ini ada lebih dari 300 lukisan, dari seniman mancanegara ataupun pelukis Indonesia. Mengasikan bukan untuk wisata di Bali anda?
+      section
+        p Bangunan museum Neka Ubud Bali, memiliki arsitektur khas Bali dengan standar museum International. Selain bangunan museum Neka sangat terawat, cara menampilkan hasil seni lukis di museum Neka sangat terorganisir. Ini memudahkan pengunjung, untuk mengerti dan menikmati seni lukis. Setiap tahun, lukisan di museum Neka bertambah banyak dan saat ini ada lebih dari 300 lukisan, dari seniman mancanegara ataupun pelukis Indonesia. 
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
         img.big(src="images/Museumneka.jpg" height = 250 width = 600)
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
         h3 Jam Buka Museum Dan Biaya Tiket Masuk
-        p.bullet Tiket masuk akan dikenakan sebesar Rp 50.000, untuk orang dewasa dan anak-anak di bawah 12 tahun gratis. Untuk jam buka dapat anda lihat di bawah ini.
+        p.bullet Tiket masuk akan dikenakan sebesar Rp 50.000, untuk orang dewasa dan anak-anak di bawah 12 tahun gratis. Untuk jam buka dapat dilihat di bawah ini.
         ulcircle
          li Senin-Sabtu 09:00 - 17.00
          li Minggu 13:00 - 17.00
          li Hari Libur National tutup
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
         h2 Tempat Lukisan Pelukis Affandi
-
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
         p.bullet Museum Neka salah satu tempat di Bali untuk dapat melihat lukisan karya Affandi. Terdapat dua lukisan karya Affandi di museum Neka Ubud, yaitu:
         ol
           li Lukisan Tari Barong & Rangda, tahun 1973. Dengan ukuran lukisan 100 x 185 cm.
           li Lukisan Perahu Nelayan, tahun 1975. Dengan ukuran lukisan 103 x 129 cm.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
         p Selain Affandi, museum Neka Ubud juga memamerkan lukisan dari pelukis Bagong Kussudiardjo, dengan judul lukisan Penari, dibuat pada tahun 1990, dengan ukuran lukisan 143 x 295 cm.
-        p Sumber data dari, <a href = "http://www.museumneka.com/default.asp">Museum Neka</a>.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
         h2 Cara Terbaik Mengunjungi Museum Neka Ubud Bali
-
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
         p Saat anda wisata di Ubud Bali, tentunya anda akan memerlukan sarana transfortasi untuk mengunjungi tempat wisata di Bali yang anda inginkan. Jika anda menginap di Ubud dan hanya ingin wisata ke satu tempat wisata di Ubud. Menggunakan taksi adalah cara terbaik. Banyak taksi yang tersedia di Ubud, jadi anda tidak akan kesusahan untuk mencari.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        p Jika anda tidak menginap di Ubud, cara terbaik untuk mengunjungi Museum Neka dan tempat wisata lain di Ubud adalah dengan menggunakan jasa sewa mobil dan driver di Bali. Kenapa kami sarankan anda menggunakan driver. Di Ubud, untuk mencari tempat parkir, tidaklah mudah. Terkadang anda harus parkir di pinggir jalan dan sangat susah untuk mendapatkan tempat parkir. Karena itu, kami sarankan anda menggunakan jasa rental mobil dan supir di Ubud Bali. Selain Museum Neka, Ubud juga memiliki museum lain yang layak untuk anda kunjungi. Nama museumnya adalah Arma museum Ubud.
+      section
+        p Jika wisatawan tidak menginap di Ubud, cara terbaik untuk mengunjungi Museum Neka dan tempat wisata lain di Ubud adalah dengan menggunakan jasa sewa mobil dan driver di Bali. Di Ubud, untuk mencari tempat parkir, tidaklah mudah. Terkadang harus parkir di pinggir jalan dan sangat susah untuk mendapatkan tempat parkir. Karena itu, disarankan untuk  menggunakan jasa rental mobil dan supir di Ubud Bali. Selain Museum Neka, Ubud juga memiliki museum lain yang layak untuk anda kunjungi. Nama museumnya adalah Arma museum Ubud.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        p Jika anda tidak terlalu familiar akan tempat wisata di Ubud, kami sarakan anda untuk mencari paket Ubud Tour. Sebagain besar penyedia paket liburan di Bali, telah memasukkan biaya tiket masuk objek wisata dan makan siang. Dengan membeli paket tour ke Ubud, jadwal liburan anda terencana dan budget liburan sudah di ketahui dari awal.
 
-   script(src='build/build.js')
+   include footer
+
+
