--- a/src/13.Tirta sari Legong.jade
+++ b/src/13.Tirta sari Legong.jade
@@ -1,46 +1,41 @@
 doctype html
 html
-  head
-    meta(charset='utf-8')
-    meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
-    title tirta sari legong
+  include header
 
-    link(rel='stylesheet', type='text/css', href='build/build.css')
-
-  body
-
+  body.classic
+    include menu
     article
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
         h1 Tirta Sari Legong
-        img(src="images/TSL.jpg" width = 400)
+        img(src="images/TSL.jpg" height=300 width=600)
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')        
+      section        
         p Tempat wisata di Ubud Bali sangat terkenal sampai ke mancanegara, karena seni dan budayanya. Baik seni lukis, seni musik gambelan Bali dan seni tari Bali. Di Bali ada 3 jenis tari Bali yang menjadi favorit wisatawan saat berlibur. Seni tari tersebut antara lain, tari Barong, tari kecak dan tari Legong. Dihalaman ini, saya khusus menuliskan untuk pembaca, tentang seni tari Legong Tirtasari atau Tirta Sari Legong
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
         p Salah satu objek wisata di Bali terbaik untuk menonton seni tari klasik Bali seperti tari Legong adalah Ubud. Di Ubud ada banyak tempat yang mementaskan seni tari Legong Bali dan yang terbaik menurut saya pribadi adalah pementasan grup tari Tirta Sari.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
         img.big(src="images/TSL1.jpg")
         h3 Sejarah Grup Tari Tirta Sari Peliatan Ubud
         p  Grup tari Tirta Sari dibentuk pada tahun 1978 oleh Anak Agung Gde Mandera, yang berasal dari Puri Kaleran Peliatan Ubud. Tujuan awal dari Anak Agung Gde Mandera membentuk group tari Tirta Sari, adalah untuk melestarikan seni tari Bali dan seni musik klasik yang ada di Peliatan Ubud.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        p Awal cerita terbentuknya gup tari Tirta Sari, saat Anak Agung Gde Mandera memanggil guru seniman musik klasik di daerah Peliatan Ubud, yang bernama I Made Lebah, untuk mementaskan pertunjukan tari Barong, pertunjukan tari Barong ini ini diberi nama Barong Bebekah
+      section
+        p Awal cerita terbentuknya gup tari Tirta Sari, saat Anak Agung Gde Mandera memanggil guru seniman musik klasik di daerah Peliatan Ubud, yang bernama I Made Lebah, untuk mementaskan pertunjukan tari Barong, pertunjukan tari Barong ini ini diberi nama Barong Bebekah.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
         P Lambat laun grup tari Tirta Sari mulai berkembang dengan menyempurnakan musik klasik khas Bali. Guruh Soekarno Putra pada tahun 1982, mengajak grup Tirta Sari untuk berkolaborasi dengan kelompok tari Swara Marhardika dan memadukan musik klasik Bali dengan musik kontemporer. Perpaduan antara kelompok tari Tirta Sari dengan kelompok tari Swara Marhardika,  dipentaskan pertama kali untuk upacara pembukaan Jakarta Fair.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
         P Semenjak itu, kelompok tari Tirta Sari, mulai dikenal dan selalu diminta untuk mengadakan pertunjukan tari di tingkat resmi negara dan kegiatan sosial. Saat ini kelompok tari Tirta Sari, dipimpin oleh Anak Agung Gde Oka Dalem, secara rutin mengadakan pertunjukan seni tari klasik Bali untuk para wisatawan yang ingin menonton tari klasik Bali.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
         img.big(src="images/TSL2.jpg")
         h3 Kelompok Legong Lasem Tirta Sari
         p  Kelompok tari Tirta Sari juga dikenal dengan nama Legong Lasem Tirta Sari. Grup tari ini juga dinamakan Legong Lasem, karena mementaskan tari Legong Bali yang paling lengkap atau disebut dengan nama Legong Lasem. Jumlah anggota kelompok tari Tirta Sari terdiri dari 37 musisi dan 21 penari.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
         P.bullet Untuk tarian Legong di Bali jenis gambelan (alat musik tradisional khas Bali) yang digunakan diberi nama gambelan Semar Pegulingan. Ada beberapa jenis tarian Legong Bali yang dipentaskan oleh kelompok tari Tirta Sari seperti:
         ulcircle
           li Legong Lasem (versi lengkap)
@@ -51,17 +46,17 @@ html
           li Legong Kuntul
           li Legong Untung Surapati (tari kreasi baru)
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
         h2 Jadwal & Harga Tiket Pertunjukan Tirta Sari Legong
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        p.bullet Jika anda ingin menonton tari Tirta Sari Legong di Peliatan Ubud, mohon di catat, pertunjukan tari Tirta Sari Legong hanya di pentaskan pada hari Jumat. Jadi tidak setiap hari ada pertunjukan tari Tirta Sari Legong di Peliatan Ubud.
+      section
+        p.bullet Jika ingin menonton tari Tirta Sari Legong di Peliatan Ubud, mohon di catat, pertunjukan tari Tirta Sari Legong hanya di pentaskan pada hari Jumat. Jadi tidak setiap hari ada pertunjukan tari Tirta Sari Legong di Peliatan Ubud.
         ulcircle
           li Setiap hari Jumat
           li Jam 19:30 &#45 21:00
           li Harga tiket pertunjukan tari Legong Tirtasari, Rp 100.000 / orang
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
         h3.bullet Program Pertunjukan Tirta Sari Legong
         ol
           <li style="text-align: left;"> Musik instrumental pembuka, judul musik Sekar Gendot</li>
@@ -76,22 +71,23 @@ html
           <li style="text-align: left;"> Tari Oleg Tambulilimgan</li>
           <li style="text-align: left;"> Tari Barong Taru Pramana</li>
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
         p Program pertujukan tari kelompok Tirta Sari Legong dapat berubah sewaktu-waktu, semuanya tergantung dari ketersediaan penari saat itu. Jadi bisa saja saat anda berkunjung menonton kelompok Tirta Sari Legong di Peliatan, salah satu tarian tidak di pertunjukan.
         p Jika anda ingin menonton pertujukan Tirta Sari Legong tapi tidak pada hari Jumat, anda dapat menonton pertunjukan tari Tirta Sari Legong di Hotel Oberoi Seminyak setiap sabtu. Kelompok tari Legong Lasem Tirta Sari, telah melakukan pertujukan di Hotel Oberoi Seminyak setiap sabtu, hampir dalam kurun waktu 25 tahun.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
         h2 Cara Menuju Lokasi Pertujukan Tari Legong Lasem Tirta Sari
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
+      section
         img.big(src="images/Tirta Sari Legong 1.jpg")
         p Untuk menuju lokasi Balerung Stage Peliatan ada banyak cara yang dapat anda lakukan. Jika anda menginap di Ubud selama liburan di Bali, tentunya tidak akan susah untuk mencari lokasi Balerung Stage Peliatan. Menggunakan taksi adakah cara terbaik jika anda menginap di Ubud.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        p Bagi yang menginap di kawasan <a href = "http://www.rentalmobilbali.net/tag/wisata-di-bali/">wisata di Bali</a> yang lain seperti <a href = "http://www.rentalmobilbali.net/tempat-wisata-di-bali-kuta/">objek wisata Kuta</a>, maka menggunakan taksi bukan pilihan yang tepat. Karena taksi menggunakan argo meter dan akan membuat budget transfortasi selama liburan menjadi mahal. Cara terbaik untuk menuju lokasi Balerung Stage Peliatan, jika anda menginap di Kuta adalah menggunakan jasa sewa mobil dengan sopir di Kuta Bali. Dengan menggunakan jasa sewa mobil + driver di Bali, anda dapat menyewa selama 10 jam dengan harga yang terjangkau. Selain itu supir akan menunggu anda sampai pertunjukan selesai. Jadi tidak perlu memikirkan saranan transfortasi Balik ke hotel.
+      section
+        p Bagi yang menginap di kawasan wisata di Bali yang lain seperti objek wisata Kuta, maka menggunakan taksi bukan pilihan yang tepat. Karena taksi menggunakan argo meter dan akan membuat budget transfortasi selama liburan menjadi mahal. Cara terbaik untuk menuju lokasi Balerung Stage Peliatan, jika menginap di Kuta adalah menggunakan jasa sewa mobil dengan sopir di Kuta Bali. Dengan menggunakan jasa sewa mobil + driver di Bali, wisatawan dapat menyewa selama 10 jam dengan harga yang terjangkau. Selain itu supir akan menunggu sampai pertunjukan selesai. Jadi tidak perlu memikirkan saranan transfortasi Balik ke hotel.
 
-      section.emphatic-text(data-bespoke-backdrop='emphatic')
-        p Selain itu, jika anda menggunakan sewa mobil plus sopir di Bali, selain menonton pertunjukan tari Legong Lasem Tirta Sari, anda juga dapat berwisata ke tempat wisata di Ubud yang lain, seperti monkey forest Ubud dan wisata kuliner ke restoran bebek Bengil Ubud.
+      section
+        p Selain itu, jika menggunakan sewa mobil plus sopir di Bali, selain menonton pertunjukan tari Legong Lasem Tirta Sari, anda juga dapat berwisata ke tempat wisata di Ubud yang lain, seperti monkey forest Ubud dan wisata kuliner ke restoran bebek Bengil Ubud.
+
+   include footer
 
 
-   script(src='build/build.js')
