--- a/src/index.jade
+++ b/src/index.jade
@@ -6,111 +6,48 @@ html
     include menu
     article
 
-      Section
-        h1 Wisata Ubud Bali
+      section
+        h1 Museum Neka Ubud Bali
+        img.big(src="images/museumneka2.jpg" height = 250 width = 600)
 
-      Section
-        P Wisata Ubud Bali, tempat wisata di Bali yang banyak wisatawan mancanegara dan wisatawan domestik yang tertarik untuk kunjungi. Tempat wisata di Ubud Bali, adalah sebuah kecamatan yang sangat terkenal semejak tahun 1930-an.
-        p Tempat wisata di Ubud Bali, terletak di Kabupaten Gianyar, Kabupaten yang banyak memiliki seniman dan dapat dikatakan merupakan pusat budaya seni di Bali, khusus seni lukis, seni ukir, seni patung, seni tari dan musik traditional Bali.
-        p Desa Ubud dari airport <A href = "http://www.rentalmobilbali.net/tag/denpasar/"> Denpasar </a>, berjarak kurang lebih 40 kilometer, dan dengan mobil anda akan menempuh waktu selama satu setengah jam.
+      section        
+        p Aktivitas wisata Ubud Bali, sangat terkenal sampai ke mancanegara dan banyak hal menarik yang wisatawan, dapat lakukan di tempat wisata Ubud. Salah satu tempat menarik di Ubud Bali, yang banyak mendapat kunjungan dari wisatawan adalah Museum Neka Ubud Bali. Jika anda pernah mendengar pelukis terkenal Indonesia, yang bernama Affandi dan Bagong Kussudiardjo. Maka Museum Neka Ubud, salah satu tempat tempat wisata di Ubud Bali yang harus di kunjungi.
 
-      Section
-        h1 Wisata Ubud Bali Indonesia
-        img.big(src="images/wisata-ubud-bali.png" height = 300 width = 600)
+      section
+        h3 Neka Art Museum Di Ubud
+        p Museum Neka Ubud Bali, lokasinya berada di Jalan Raya Campuhan, Kedewatan, Ubud
+        p  Museum Neka Ubud Bali, dibuka pada tahun 1982. Nama Museum berasal dari nama seorang guru, yang memiliki kegemaran dalam mengkoleksi lukisan, nama guru tersebut adalah Suteja Neka.
 
-      Section
-        p Desa Ubud, daerah seni yang sangat sering disebut sebagai desa bertaraf internasional. Semua orang yang telah mengenal tempat wisata Ubud Bali pasti mengatakan, Ubud memang pantas untuk menyandang predikat desa internasional. Sebagian besar dipinggir jalan di kawasan ubud terdapat restaurant, hotel, galeri dan toko-toko yang menjual kerajinan lokal.
-        p Tempat wisata di Ubud Bali sangat terkenal terkenal, baik di Indonesia maupun ke mancanegara, kecamatan yang memiliki lokasi yang terletak di antara persawahan dan kawasan hutan diapit oleh jurang-jurang dengan sungai, yang membuat lokasi ini, menggambarkan alam yang sangat indah.
+      section
+        p Bangunan museum Neka Ubud Bali, memiliki arsitektur khas Bali dengan standar museum International. Selain bangunan museum Neka sangat terawat, cara menampilkan hasil seni lukis di museum Neka sangat terorganisir. Ini memudahkan pengunjung, untuk mengerti dan menikmati seni lukis. Setiap tahun, lukisan di museum Neka bertambah banyak dan saat ini ada lebih dari 300 lukisan, dari seniman mancanegara ataupun pelukis Indonesia. 
 
-      Section
-        p Selain karena kondisi alam, Ubud juga terkenal karena seni dan budaya Bali dan sangat berkembang dari tahun ketahun. Sebagian masyarakat Ubud, kehidupan sehari-hari mereka tidak lepas dari unsur seni dan budaya. Juga sebagian masyarakatnya bermata pencaharian sebagai seniman.
+      section
+        img.big(src="images/Museumneka.jpg" height = 250 width = 600)
 
-      Section
-        p Jika anda ingin mengunjungi desa Ubud, supir kami siap mengantarkan anda desa Ubud, jika anda menyewa kendaraan dengan supir di rental mobil Bali. Selain itu, kami juga menyediakan tour murah di Bali secara khusus untuk tour di Ubud. Untuk lebih detail tentang paket tour ke Ubud, silakan klik link ini, paket tour Ubud.
+      section
+        h3 Jam Buka Museum Dan Biaya Tiket Masuk
+        p.bullet Tiket masuk akan dikenakan sebesar Rp 50.000, untuk orang dewasa dan anak-anak di bawah 12 tahun gratis. Untuk jam buka dapat dilihat di bawah ini.
+        ulcircle
+         li Senin-Sabtu 09:00 - 17.00
+         li Minggu 13:00 - 17.00
+         li Hari Libur National tutup
 
-      Section
-        h2 Daftar Aktifitas & Tempat Menarik Di Ubud
+      section
+        h2 Tempat Lukisan Pelukis Affandi
+        p.bullet Museum Neka salah satu tempat di Bali untuk dapat melihat lukisan karya Affandi. Terdapat dua lukisan karya Affandi di museum Neka Ubud, yaitu:
+        ol
+          li Lukisan Tari Barong & Rangda, tahun 1973. Dengan ukuran lukisan 100 x 185 cm.
+          li Lukisan Perahu Nelayan, tahun 1975. Dengan ukuran lukisan 103 x 129 cm.
 
-      Section
-        <a href="1. Tampak Siring.html"> <h2> Tampak Siring </h2> </a>
-        img.big(src="images/Tampak Siring - 1.jpg" height = 300 width = 600)
+        p Selain Affandi, museum Neka Ubud juga memamerkan lukisan dari pelukis Bagong Kussudiardjo, dengan judul lukisan Penari, dibuat pada tahun 1990, dengan ukuran lukisan 143 x 295 cm.
 
-      Section
-        <a href="2. Puri Ubud.html"> <h2> Puri Ubud </h2> </a>
-        img.big(src="images/istana-puri-saren-ubud-bali.jpg" height = 300 width = 600)
+      section
+        h2 Cara Terbaik Mengunjungi Museum Neka Ubud Bali
+        p Saat anda wisata di Ubud Bali, tentunya anda akan memerlukan sarana transfortasi untuk mengunjungi tempat wisata di Bali yang anda inginkan. Jika anda menginap di Ubud dan hanya ingin wisata ke satu tempat wisata di Ubud. Menggunakan taksi adalah cara terbaik. Banyak taksi yang tersedia di Ubud, jadi anda tidak akan kesusahan untuk mencari.
 
-      Section
-        <a href="3. Pura Taman Saraswati.html"> <h2> Pura Taman Saraswati </h2> </a>
-        img.big(src="images/Pura-Taman-Saraswati-Ubud.jpg" height = 300 width = 600)
+      section
+        p Jika wisatawan tidak menginap di Ubud, cara terbaik untuk mengunjungi Museum Neka dan tempat wisata lain di Ubud adalah dengan menggunakan jasa sewa mobil dan driver di Bali. Di Ubud, untuk mencari tempat parkir, tidaklah mudah. Terkadang harus parkir di pinggir jalan dan sangat susah untuk mendapatkan tempat parkir. Karena itu, disarankan untuk  menggunakan jasa rental mobil dan supir di Ubud Bali. Selain Museum Neka, Ubud juga memiliki museum lain yang layak untuk anda kunjungi. Nama museumnya adalah Arma museum Ubud.
 
-      Section
-        <a href="4. Tari Kecak Ubud.html"> <h2> Tari Kecak Ubud </h2> </a>
-        img.big(src="images/Tari-Kecak-Ubud.jpg" height = 300 width = 600)
-
-      Section
-        <a href="5. Lempad House.html"> <h2> Lempad House </h2> </a>
-        img.big(src="images/lempad-house.jpg" height = 300 width = 600)
-
-      Section
-        <a href="6. Ayung Rafting.html"> <h2> Ayung Rafting </h2> </a>
-        img.big(src="images/ayung-rafting-ubud.jpg" height = 300 width = 600)
-
-      Section
-        <a href="7. Sawah Terasering Ubud.html"> <h2> Sawah Terasering Ubud </h2> </a>
-        img.big(src="images/Sawah-Terasering-Ubud.jpg" height = 300 width = 600)
-
-      Section
-        <a href="8. Ubud Monkey Forest.html"> <h2> Ubud Monkey Forest </h2> </a>
-        img.big(src="images/ubudMKF.jpg" height = 300 width = 600)
-
-      Section
-        <a href="9. Arma Museum Ubud.html"> <h2> Arma Museum Ubud </h2> </a>
-        img.big(src="images/amu1.jpg" height = 300 width = 600)
-
-      Section
-        <a href="10. Goa Gajah Ubud.html"> <h2> Goa Gajah Ubud </h2> </a>
-        img.big(src="images/Goa Gajah - 1.jpg" height = 300 width = 600)
-
-      Section
-        <a href="11. Gunung Kawi Bali.html"> <h2> Gunung Kawi Bali </h2> </a>
-        img.big(src="images/Gunung-Kawi-Bali.jpg" height = 300 width = 600)
-
-      Section
-        <a href="12. Air Terjun Tegenungan.html"> <h2> Air Terjun Tegenungan </h2> </a>
-        img.big(src="images/air-terjun-tegenungan.jpg" height = 300 width = 600)
-
-      Section
-        <a href="13. Tirta Sari Legong.html"> <h2> Tirta Sari Legong </h2> </a>
-        img.big(src="images/tsl.jpg" height = 300 width = 600)
-
-      Section
-        <a href="14. Museum Puri Lukisan Ubud.html"> <h2> Museum Puri Lukisan Ubud </h2> </a>
-        img.big(src="images/Museum-Puri-Lukisan-Ubud.jpg" height = 300 width = 600)
-
-      Section
-        <a href="15. Pura Gunung Lebah.html"> <h2> Pura Gunung Lebah </h2> </a>
-        img.big(src="images/PGL.jpg" height = 300 width = 600)
-
-      Section
-        <a href="16. Museum Neka Ubud Bali.html"> <h2> Museum Neka Ubud Bali </h2> </a>
-        img.big(src="images/museum-neka-ubud.jpg" height = 300 width = 600)
-
-      Section
-        <a href="17. Museum Blanco Ubud.html"> <h2> Museum Blanco Ubud </h2> </a>
-        img.big(src="images/don-antonio-blanco-museum-ubud.jpg" height = 300 width = 600)
-
-      Section
-        <a href="18. Legong Mahabharata.html"> <h2> Legong Mahabharata </h2> </a>
-        img.big(src="images/Legong-Mahabharata-Di-Ubud.jpg" height = 300 width = 600)
-
-      Section
-        <a href="19. Yeh Pulu Relief.html"> <h2> Yeh Pulu Relief </h2> </a>
-        img.big(src="images/yeh-pulu-relief.jpg" height = 300 width = 600)
-
-      Section
-        <a href="20. Tari Barong Ubud.html"> <h2> Tari Barong Ubud </h2> </a>
-        img.big(src="images/TariBarongUbud.jpg" height = 300 width = 600)
 
    include footer
-
 
